# q

./: .gitignore  Cargo.toml  apply_patch.py  build.rs
patches/: compact_str-0.8.0-beta.patch  core.patch  num-bigint-0.4.5.patch  num-bigint-0.5.0.patch  num-bigint-0.5.1.patch  num-bigint-09ed920.patch  num-bigint-3b7c272.patch  num-bigint-7f76052.patch  num-bigint-9e32327.patch  serde_json-1.0.120.patch  std.patch
src/: discriminant.rs  factor.rs  ideal.rs  main.rs  pell.rs  qi.rs  qr.rs
src/factor/: factor_u64.rs
